# Rheo_Finance

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  biome-diagnostics-tail.txt  biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite-build-diagnostics-tail.txt  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/: dependabot.yml
docs/: ANDROID_BUILD_NOTES.md  AUDIT-2026-05-08.md  AUDIT_PROMPT.md  CLAUDE.md  CODEX_HANDOFF.md  Claude_Design_Brief.md  ENTITLEMENTS_PHASE_1.md  Evochia Finance.html  Evochia_Finance_Project_Plan_v1.1.md  OPERATIONS_RUNBOOK.md  QA_FINAL_CLAUDE_CODE.md  QA_FINAL_CODEX.md  RELEASE_SMOKE_CHECKLIST_v0.2.0.md  ROADMAP.md  SECRETS_INVENTORY.md  SESSION_004_search_filters_shadcn.md  SESSION_005_supabase_auth.md  SESSION_006_sync_engine.md  SESSION_007_receipt_photos.md  SESSION_008_recurring_templates.md  SESSION_009_vat_forecast.md  SESSION_010_settings_export_polish.md  SESSION_011_android_port.md  SUPABASE_PREP_CHECKLIST.md  TAURI_SIGNING_ROTATION.md  (+7 more)
src-tauri/: Cargo.toml  tauri-icons.json  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: android.json  default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_seed.sql  0003_sync_metadata_baseline.sql  0004_plans_coverage.sql  0005_coverage_income_recurring.sql  0006_uuid_seed_ids.sql  0007_coverage_user_scope.sql  0008_tags_name_nocase.sql
src-tauri/src/: lib.rs  main.rs  secure_auth_storage.rs
(+200 files in other folders)
